--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
   assets:
     - assets/brick_break.mp3
     - assets/background_music.mp3
+    - assets/metal_ball.jpeg
+    - assets/paddle_1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
